// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DtTokenDependencyGraph Adding dependencies if dependency is created correctly on the alias. 1`] = `
DependencyGraphNode {
  "dependencies": Array [],
  "name": "fluid-button--spacing",
  "type": "token",
}
`;

exports[`DtTokenDependencyGraph Adding dependencies if dependency is created correctly on the alias. 2`] = `
DependencyGraphNode {
  "dependencies": Array [
    DependencyGraphNode {
      "dependencies": Array [],
      "name": "fluid-button--spacing",
      "type": "token",
    },
  ],
  "name": "fluid-spacing-0",
  "type": "alias",
}
`;

exports[`DtTokenDependencyGraph Adding dependencies if dependency is not duplicated if connected multiple times 1`] = `
DependencyGraphNode {
  "dependencies": Array [],
  "name": "fluid-button--spacing",
  "type": "token",
}
`;

exports[`DtTokenDependencyGraph Adding dependencies if dependency is not duplicated if connected multiple times 2`] = `
DependencyGraphNode {
  "dependencies": Array [
    DependencyGraphNode {
      "dependencies": Array [],
      "name": "fluid-button--spacing",
      "type": "token",
    },
  ],
  "name": "fluid-spacing-0",
  "type": "alias",
}
`;

exports[`DtTokenDependencyGraph Deserialization if dependencies have been deserialized correctly 1`] = `
DependencyGraphNode {
  "dependencies": Array [
    DependencyGraphNode {
      "dependencies": Array [
        DependencyGraphNode {
          "dependencies": Array [],
          "name": "fluid-button",
          "type": "component",
        },
      ],
      "name": "fluid-button--spacing",
      "type": "token",
    },
  ],
  "name": "fluid-spacing-0",
  "type": "alias",
}
`;

exports[`DtTokenDependencyGraph Deserialization if dependencies have been deserialized correctly 2`] = `
DependencyGraphNode {
  "dependencies": Array [
    DependencyGraphNode {
      "dependencies": Array [],
      "name": "fluid-button",
      "type": "component",
    },
  ],
  "name": "fluid-button--spacing",
  "type": "token",
}
`;

exports[`DtTokenDependencyGraph Deserialization if dependencies have been deserialized correctly 3`] = `
DependencyGraphNode {
  "dependencies": Array [],
  "name": "fluid-button",
  "type": "component",
}
`;

exports[`DtTokenDependencyGraph Serialization graph should serialize correctly 1`] = `
"[
  [
    \\"fluid-button--spacing\\",
    {
      \\"name\\": \\"fluid-button--spacing\\",
      \\"type\\": \\"token\\",
      \\"dependencies\\": [
        {
          \\"name\\": \\"fluid-button\\",
          \\"type\\": \\"component\\",
          \\"dependencies\\": []
        }
      ]
    }
  ],
  [
    \\"fluid-spacing-0\\",
    {
      \\"name\\": \\"fluid-spacing-0\\",
      \\"type\\": \\"alias\\",
      \\"dependencies\\": [
        {
          \\"name\\": \\"fluid-button--spacing\\",
          \\"type\\": \\"token\\",
          \\"dependencies\\": [
            {
              \\"name\\": \\"fluid-button\\",
              \\"type\\": \\"component\\",
              \\"dependencies\\": []
            }
          ]
        }
      ]
    }
  ],
  [
    \\"fluid-button\\",
    {
      \\"name\\": \\"fluid-button\\",
      \\"type\\": \\"component\\",
      \\"dependencies\\": []
    }
  ]
]"
`;
